--- a/hdfsreader/pom.xml
+++ b/hdfsreader/pom.xml
@@ -13,7 +13,7 @@
     <packaging>jar</packaging>
     <properties>
         <hive.version>1.1.1</hive.version>
-        <hadoop.version>2.7.1</hadoop.version>
+        <hadoop.version>2.8.0</hadoop.version>
     </properties>
     <dependencies>
         <dependency>
@@ -36,6 +36,11 @@
             <artifactId>logback-classic</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-aws</artifactId>
+            <version>${hadoop.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-hdfs</artifactId>
