--- a/drdswriter/pom.xml
+++ b/drdswriter/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.alibaba.datax</groupId>
         <artifactId>datax-all</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>v1.0.0-hashdata</version>
     </parent>
 
     <artifactId>drdswriter</artifactId>
