--- a/elasticsearchwriter/pom.xml
+++ b/elasticsearchwriter/pom.xml
@@ -3,14 +3,14 @@
     <parent>
         <artifactId>datax-all</artifactId>
         <groupId>com.alibaba.datax</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>v1.0.0-hashdata</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>elasticsearchwriter</artifactId>
 
     <groupId>com.alibaba.datax</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>v1.0.0-hashdata</version>
 
     <dependencies>
         <dependency>
