--- a/hbase094xreader/pom.xml
+++ b/hbase094xreader/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <artifactId>datax-all</artifactId>
         <groupId>com.alibaba.datax</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>v1.0.0-hashdata</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>hbase094xreader</artifactId>
     <name>hbase094xreader</name>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>v1.0.0-hashdata</version>
 
 
     <dependencies>
