--- a/hbase094xwriter/pom.xml
+++ b/hbase094xwriter/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <artifactId>datax-all</artifactId>
         <groupId>com.alibaba.datax</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>v1.0.0-hashdata</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>hbase094xwriter</artifactId>
     <name>hbase094xwriter</name>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>v1.0.0-hashdata</version>
 
     <properties>
         <commons-codec.version>1.8</commons-codec.version>
@@ -69,7 +69,7 @@
         <dependency>
             <groupId>com.alibaba.datax</groupId>
             <artifactId>datax-common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>v1.0.0-hashdata</version>
         </dependency>
     </dependencies>
 
