--- a/hdfsreader/pom.xml
+++ b/hdfsreader/pom.xml
@@ -3,13 +3,13 @@
     <parent>
         <artifactId>datax-all</artifactId>
         <groupId>com.alibaba.datax</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>v1.0.0-hashdata</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>hdfsreader</artifactId>
     <groupId>com.alibaba.datax</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>v1.0.0-hashdata</version>
     <packaging>jar</packaging>
     <properties>
         <hive.version>1.1.1</hive.version>
