--- a/mysqlreader/pom.xml
+++ b/mysqlreader/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.alibaba.datax</groupId>
 		<artifactId>datax-all</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>v1.0.0-hashdata</version>
 	</parent>
 	<artifactId>mysqlreader</artifactId>
 	<name>mysqlreader</name>
