--- a/otsstreamreader/pom.xml
+++ b/otsstreamreader/pom.xml
@@ -6,11 +6,11 @@
     <parent>
         <groupId>com.alibaba.datax</groupId>
         <artifactId>datax-all</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>v1.0.0-hashdata</version>
     </parent>
     <groupId>com.alibaba.datax</groupId>
     <artifactId>otsstreamreader</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>v1.0.0-hashdata</version>
 
     <dependencies>
         <dependency>
