--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.alibaba.datax</groupId>
     <artifactId>datax-all</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>v1.0.0-hashdata</version>
     <dependencies>
         <dependency>
             <groupId>org.hamcrest</groupId>
@@ -17,7 +17,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <datax-project-version>0.0.1-SNAPSHOT</datax-project-version>
+        <datax-project-version>v1.0.0-hashdata</datax-project-version>
         <commons-lang3-version>3.3.2</commons-lang3-version>
         <commons-configuration-version>1.10</commons-configuration-version>
         <commons-cli-version>1.2</commons-cli-version>
@@ -176,7 +176,7 @@
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                    <finalName>datax</finalName>
+                    <finalName>datax-${datax-project-version}</finalName>
                     <descriptors>
                         <descriptor>package.xml</descriptor>
                     </descriptors>
