--- a/rdbmswriter/pom.xml
+++ b/rdbmswriter/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>datax-all</artifactId>
 		<groupId>com.alibaba.datax</groupId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>v1.0.0-hashdata</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
