--- a/streamwriter/pom.xml
+++ b/streamwriter/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.alibaba.datax</groupId>
 		<artifactId>datax-all</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>v1.0.0-hashdata</version>
 	</parent>
 
 	<artifactId>streamwriter</artifactId>
