--- a/adswriter/pom.xml
+++ b/adswriter/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>commons-configuration</artifactId>
             <version>1.10</version>
         </dependency>
+        <dependency>
+            <groupId>com.aliyun.odps</groupId>
+            <artifactId>odps-sdk-core</artifactId>
+            <version>0.29.6-public</version>
+        </dependency>
 
     </dependencies>
 
