--- a/adswriter/src/main/assembly/package.xml
+++ b/adswriter/src/main/assembly/package.xml
@@ -20,7 +20,7 @@
 		<fileSet>
 			<directory>target/</directory>
 			<includes>
-				<include>adswriter-0.0.1-SNAPSHOT.jar</include>
+				<include>adswriter-${version}.jar</include>
 			</includes>
 			<outputDirectory>plugin/writer/adswriter</outputDirectory>
 		</fileSet>
