--- a/core/src/main/assembly/package.xml
+++ b/core/src/main/assembly/package.xml
@@ -41,7 +41,7 @@
         <fileSet>
             <directory>target/</directory>
             <includes>
-                <include>datax-core-0.0.1-SNAPSHOT.jar</include>
+                <include>datax-core-${version}.jar</include>
             </includes>
             <outputDirectory>/lib</outputDirectory>
         </fileSet>
