--- a/ftpwriter/src/main/assembly/package.xml
+++ b/ftpwriter/src/main/assembly/package.xml
@@ -19,7 +19,7 @@
 		<fileSet>
 			<directory>target/</directory>
 			<includes>
-				<include>ftpwriter-0.0.1-SNAPSHOT.jar</include>
+				<include>ftpwriter-${version}.jar</include>
 			</includes>
 			<outputDirectory>plugin/writer/ftpwriter</outputDirectory>
 		</fileSet>
