--- a/gpdbwriter/src/main/assembly/package.xml
+++ b/gpdbwriter/src/main/assembly/package.xml
@@ -19,7 +19,7 @@
         <fileSet>
             <directory>target/</directory>
             <includes>
-                <include>gpdbwriter-0.0.1-SNAPSHOT.jar</include>
+                <include>gpdbwriter-${version}.jar</include>
             </includes>
             <outputDirectory>plugin/writer/gpdbwriter</outputDirectory>
         </fileSet>
