--- a/hbase094xwriter/src/main/assembly/package.xml
+++ b/hbase094xwriter/src/main/assembly/package.xml
@@ -19,7 +19,7 @@
 		<fileSet>
 			<directory>target/</directory>
 			<includes>
-				<include>hbase094xwriter-0.0.1-SNAPSHOT.jar</include>
+				<include>hbase094xwriter-${version}.jar</include>
 			</includes>
 			<outputDirectory>plugin/writer/hbase094xwriter</outputDirectory>
 		</fileSet>
