--- a/hbase11xreader/src/main/assembly/package.xml
+++ b/hbase11xreader/src/main/assembly/package.xml
@@ -19,7 +19,7 @@
 		<fileSet>
 			<directory>target/</directory>
 			<includes>
-				<include>hbase11xreader-0.0.1-SNAPSHOT.jar</include>
+				<include>hbase11xreader-${version}.jar</include>
 			</includes>
 			<outputDirectory>plugin/reader/hbase11xreader</outputDirectory>
 		</fileSet>
