--- a/hbasereader/src/main/assembly/package.xml
+++ b/hbasereader/src/main/assembly/package.xml
@@ -19,7 +19,7 @@
         <fileSet>
             <directory>target/</directory>
             <includes>
-                <include>hbasereader-0.0.1-SNAPSHOT.jar</include>
+                <include>hbasereader-${version}.jar</include>
             </includes>
             <outputDirectory>plugin/reader/hbasereader</outputDirectory>
         </fileSet>
