--- a/mongodbjsonreader/src/main/assembly/package.xml
+++ b/mongodbjsonreader/src/main/assembly/package.xml
@@ -20,7 +20,7 @@
         <fileSet>
             <directory>target/</directory>
             <includes>
-                <include>mongodbjsonreader-0.0.1-SNAPSHOT.jar</include>
+                <include>mongodbjsonreader-${version}.jar</include>
             </includes>
             <outputDirectory>plugin/reader/mongodbjsonreader</outputDirectory>
         </fileSet>
