--- a/odpsreader/src/main/assembly/package.xml
+++ b/odpsreader/src/main/assembly/package.xml
@@ -19,7 +19,7 @@
 		<fileSet>
 			<directory>target/</directory>
 			<includes>
-				<include>odpsreader-0.0.1-SNAPSHOT.jar</include>
+				<include>odpsreader-${version}.jar</include>
 			</includes>
 			<outputDirectory>plugin/reader/odpsreader</outputDirectory>
 		</fileSet>
