--- a/odpswriter/src/main/assembly/package.xml
+++ b/odpswriter/src/main/assembly/package.xml
@@ -19,7 +19,7 @@
 		<fileSet>
 			<directory>target/</directory>
 			<includes>
-				<include>odpswriter-0.0.1-SNAPSHOT.jar</include>
+				<include>odpswriter-${version}.jar</include>
 			</includes>
 			<outputDirectory>plugin/writer/odpswriter</outputDirectory>
 		</fileSet>
