--- a/ossreader/src/main/assembly/package.xml
+++ b/ossreader/src/main/assembly/package.xml
@@ -18,7 +18,7 @@
         <fileSet>
             <directory>target/</directory>
             <includes>
-                <include>ossreader-0.0.1-SNAPSHOT.jar</include>
+                <include>ossreader-${version}.jar</include>
             </includes>
             <outputDirectory>plugin/reader/ossreader</outputDirectory>
         </fileSet>
