--- a/otsstreamreader/src/main/assembly/package.xml
+++ b/otsstreamreader/src/main/assembly/package.xml
@@ -18,7 +18,7 @@
         <fileSet>
             <directory>target/</directory>
             <includes>
-                <include>otsstreamreader-0.0.1-SNAPSHOT.jar</include>
+                <include>otsstreamreader-${version}.jar</include>
             </includes>
             <outputDirectory>plugin/reader/otsstreamreader</outputDirectory>
         </fileSet>
