--- a/rdbmswriter/src/main/assembly/package.xml
+++ b/rdbmswriter/src/main/assembly/package.xml
@@ -19,7 +19,7 @@
         <fileSet>
             <directory>target/</directory>
             <includes>
-                <include>rdbmswriter-0.0.1-SNAPSHOT.jar</include>
+                <include>rdbmswriter-${version}.jar</include>
             </includes>
             <outputDirectory>plugin/writer/rdbmswriter</outputDirectory>
         </fileSet>
