--- a/sqlserverwriter/src/main/assembly/package.xml
+++ b/sqlserverwriter/src/main/assembly/package.xml
@@ -26,7 +26,7 @@
         <fileSet>
             <directory>target/</directory>
             <includes>
-                <include>sqlserverwriter-0.0.1-SNAPSHOT.jar</include>
+                <include>sqlserverwriter-${version}.jar</include>
             </includes>
             <outputDirectory>plugin/writer/sqlserverwriter</outputDirectory>
         </fileSet>
